--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,30 +14,29 @@ services:
       interval: 10s
       timeout: 5s
       retries: 5
+#
+#  web:
+#    build:
+#      context: .
+#      dockerfile: docker_servers/web/Dockerfile.web
+#    ports:
+#      - "8000:5000"
+#    depends_on:
+#      db:
+#        condition: service_healthy
+#    env_file:
+#      - .env
+#    volumes:
+#      - .:/usr/src/app
 
-  web:
-    build: .
-    ports:
-      - "8000:5000"
-    depends_on:
-      db:
-        condition: service_healthy
-    env_file:
-      - .env
-    volumes:
-      - .:/usr/src/app
-#    entrypoint: ["./scripts/wait-for-it.sh", "db:3306"]
-    command: >
-      sh -c "alembic --config migrations/alembic.ini upgrade head && gunicorn -b 0.0.0.0:5000 --timeout 1000 run:app"
-
-  nginx:
-    image: nginx:latest
-    ports:
-      - "80:80"
-    depends_on:
-      - web
-    volumes:
-      - ./nginx/nginx.conf:/etc/nginx/nginx.conf
+#  nginx:
+#    image: nginx:latest
+#    ports:
+#      - "80:80"
+#    depends_on:
+#      - web
+#    volumes:
+#      - ./nginx/nginx.conf:/etc/nginx/nginx.conf
 
   redis:
     image: redis:latest
@@ -45,7 +44,9 @@ services:
       - "6379:6379"
 
   celery_worker_scraping:
-    build: .
+    build:
+      context: .
+      dockerfile: docker_servers/celery_scraping/Dockerfile
     depends_on:
       - db
       - redis
@@ -54,28 +55,32 @@ services:
     volumes:
       - .:/usr/src/app
     command: celery -A main_celery.celery worker --loglevel=INFO -Q scraping_queue
-
-  celery_worker_diagrams:
-    build: .
-    depends_on:
-      - db
-      - redis
-    env_file:
-      - .env
-    volumes:
-      - .:/usr/src/app
-    command: celery -A main_celery.celery worker --loglevel=INFO -Q diagrams_queue
-
-  celery_beat:
-    build: .
-    depends_on:
-      - celery_worker_diagrams
-      - celery_worker_scraping
-    env_file:
-      - .env
-    volumes:
-      - .:/usr/src/app
-    command: celery -A main_celery.celery beat --loglevel=INFO
+#
+#  celery_worker_diagrams:
+#    build:
+#      context: .
+#      dockerfile: docker_servers/celery_diagrams/Dockerfile
+#    depends_on:
+#      - db
+#      - redis
+#    env_file:
+#      - .env
+#    volumes:
+#      - .:/usr/src/app
+#    command: celery -A main_celery.celery worker --loglevel=INFO -Q diagrams_queue
+#
+#  celery_beat:
+#    build:
+#      context: .
+#      dockerfile: docker_servers/celery_scraping/Dockerfile
+#    depends_on:
+#      - celery_worker_diagrams
+#      - celery_worker_scraping
+#    env_file:
+#      - .env
+#    volumes:
+#      - .:/usr/src/app
+#    command: celery -A main_celery.celery beat --loglevel=INFO
 
 #  flower:
 #    image: mher/flower
